--- a/jellyfin-custom-theme.css
+++ b/jellyfin-custom-theme.css
@@ -1,19 +1,7 @@
-/* Change the media played indicators color to green */
-.playedIndicator {
-    background: #5dd000;
-}
-
-/* Change the media available sources indicators color to transparent black */
-.mediaSourceIndicator {
-    background: #00000058;
-}
+@import url("https://cdn.jsdelivr.net/gh/prayag17/Jellyfin-Icons/Font%20Awesome/light.css");
+@import url("https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/jf_font.css");
 
 /* Hide the sync play button in the header bar */
 /* .headerSyncButton {
     display: none;
 } */
-
-/* Create a color gradient for the title banner on film pages or TV show pages */
-.detailPagePrimaryContainer {
-    background: linear-gradient(to right, #03315c, #281a31);
-}
